# godot-tezos-sdk

./: .gitignore  .gutconfig.json  Cargo.toml  devenv.nix  icon.svg.import  project.godot
addons/tezos_sdk/: plugin.cfg  tezos.gdextension
src/: contract.rs  lib.rs  michelson.rs  operation.rs
test/: test_tezos.gd
