[package]
name = "godot-tezos-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
tezos-core = { git = "https://github.com/airgap-it/tezos-rust-sdk", branch = "main" }
tezos-michelson = { git = "https://github.com/airgap-it/tezos-rust-sdk", branch = "main" }
tezos-operation = { git = "https://github.com/airgap-it/tezos-rust-sdk", branch = "main" }
tezos-rpc = { git = "https://github.com/airgap-it/tezos-rust-sdk", branch = "main" }
tezos-contract = { git = "https://github.com/airgap-it/tezos-rust-sdk", branch = "main" }
serde_json = "1.0.108"
hex = "0.4.3"
